--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ nav a:hover {
     border-radius: 8px;
     box-shadow: 0 2px 16px rgba(34, 75, 143, 0.06);
     padding: 32px;
+    justify-content: center;
 }
 
 h1, h2, h3 {
