--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ footer {
     padding: 16px 0;
     background: #222;
     color: #fff;
-    position: relative;
+    position: sticky;
     bottom: 0;
+    margin-top: auto;
 }
